--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@smui/button": "^1.0.0",
     "@tsconfig/svelte": "^1.0.0",
+    "autoprefixer": "^10.0.2",
+    "postcss": "^8.1.10",
+    "pug": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.29.0",
