--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "author": "Arcbjorn",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "watch:tailwind": "postcss public/tailwind.css -o public/index.css -w",
+    "build:tailwind": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/index.css",
+    "build": "npm run build:tailwind && rollup -c",
+    "dev": "concurrently \"rollup -c -w\" \"npm run watch:tailwind\"",
     "start": "sirv public",
     "validate": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@smui/button": "^1.0.0",
@@ -24,11 +27,16 @@
     "sass": "^1.29.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
+    "svelte-i18n": "^3.3.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^3.9.3"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
+    "postcss-cli": "^8.3.0",
+    "sirv-cli": "^1.0.0",
+    "tailwindcss": "^2.0.1"
   }
 }
