--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "svelte-i18n": "^3.3.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
-  },
-  "dependencies": {
+    "typescript": "^3.9.3",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
     "postcss-cli": "^8.3.0",
-    "sirv-cli": "^1.0.0",
     "tailwindcss": "^2.0.1"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.0"
   }
 }
