--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.0",
     "autoprefixer": "^10.0.2",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
+    "install": "^0.13.0",
+    "npm": "^6.14.9",
     "postcss": "^8.1.10",
+    "postcss-cli": "^8.3.0",
     "pug": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
@@ -28,12 +33,9 @@
     "svelte-check": "^1.0.0",
     "svelte-i18n": "^3.3.0",
     "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "^2.0.1",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.3",
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.2",
-    "postcss-cli": "^8.3.0",
-    "tailwindcss": "^2.0.1"
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
